<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ntrip_client</name>
  <version>2.0.0</version>
  <description>NTRIP client that will publish RTCM corrections to a ROS topic, and optionally subscribe to NMEA messages to send to an NTRIP server</description>
  <maintainer email="info@silolytics.de">Ties Junge</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <depend>std_msgs</depend>
  <depend>rtcm_msgs</depend>
  <depend>nmea_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
